--- a/style.css
+++ b/style.css
@@ -7,20 +7,21 @@
     --moderate-violet: hsl(276, 55%, 52%);
     /* Chat on the right */
     --desaturated-dark-violet: hsl(271, 15%, 43%);
+    --desaturated-dark-violet-opacity: hsla(271, 15%, 43%, 0.09);
     /* Placeholder text */
-    --grayish-blue: hsl(206, 6%, 79%);
+    --grayish-blue: hsl(206, 7%, 79%);
     /* Main heading */
     --very-dark-desaturated-violet: hsl(271, 36%, 24%);
     /* Paragraph */
-    --dark-grayish-violet: hsl(270, 7%, 64%);
-
+    --dark-grayish-violet: hsl(268, 7%, 64%);
+    
     /* Gradient colors */
     --light-magenta: hsl(293, 100%, 63%);
     --light-violet: hsl(264, 100%, 61%);
 
     --white: hsl(0, 0%, 100%);
     /* app background */
-    --light-grayish-violet: hsl(270, 20%, 96%);
+    --light-grayish-violet: hsl(270, 20%, 96%); 
     /* Radio button outline */
     --very-light-magenta: hsl(289, 100%, 72%);
 
@@ -64,11 +65,178 @@ body {
 /* Specific classes 
 */
 
+main {
+    gap: 4.5rem;
+}
+
 /* Phone */
 
+.phone {
+    background-color: var(--white);
+    width: 250px;
+    height: 500px;
+    border-radius: 30px;
+    padding: 10px;
+    box-shadow: 10px 30px 60px rgba(0,0,0,.15);
+}
 
+.wrapper {
+    background-color: var(--light-grayish-violet);
+    border-radius: 20px;
+    height: 100%;
+}
+
+.top-section {
+    background: linear-gradient(to right, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+    padding: 10px 14px;
+    height: 66px;
+    border-radius: 20px 20px 5px 5px;
+    color: var(--white);
+    align-items: flex-end;
+    font-size: 10px;
+    position: relative;
+}
+
+.top-section-square {
+    width: 130px;
+    height: 20px;
+    background-color: var(--white);
+    position: absolute;
+    top: 0;
+    left: 22%;
+    border-radius: 0 0 15px 15px;
+}
+
+.back-btn {
+    margin-right: 6px;
+    font-size: 12px;
+}
+
+.user-pic {
+    margin-right: 6px;
+}
+
+.dots-btn {
+    margin-left: 5.3rem;
+    font-size: 12px;
+}
+
+.pfp {
+    width: 24px;
+    border-radius: 50%;
+    border: 1px solid var(--white);
+}
+
+.user-info {
+    gap: 2px;
+}
+
+.user-name {
+    font-weight: 500;
+}
+
+.user-status {
+    color: var(--pale-violet);
+    font-size: 8px;
+}
+
+.chat-section {
+    padding: 10px;
+    font-size: 10px;
+}
+
+.msg {
+    box-sizing: content-box;
+    max-width: 22ch;
+    padding: 8px 8px;
+    font-size: 8px;
+    margin-bottom: 8px;
+    border-radius: 10px;
+}
+
+.received {
+    align-self: flex-start;
+    color: var(--moderate-violet);
+    background-color: var(--desaturated-dark-violet-opacity);
+    border-bottom-left-radius: 3px;
+}
+
+.sent {
+    align-self: flex-end;
+    color: var(--desaturated-dark-violet);
+    background-color: var(--white);
+    border-bottom-right-radius: 3px;
+    box-shadow: 0 1.2em 1em -1em rgba(0,0,0,.1);
+}
+
+.image-row {
+    max-width: 136px;
+    width: 136px;
+    height: 40px;
+    gap: .5rem;
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.img {
+    overflow: hidden;
+    border-radius: 10px;
+    width: 2.5rem;
+}
+
+.price-bubble {
+    background: linear-gradient(to left, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+    max-width: 140px;
+    width: 100%;
+    padding-right: 1rem;
+    color: var(--white);
+    justify-content: space-between;
+}
+
+.circle-icon {
+    margin-right: 8px;
+    font-weight: 400;
+    font-size: 10px;
+    opacity: .7;
+}
+
+.price {
+    font-weight: 700;
+    font-size: 12px;
+}
+
+.text-input {
+    background-color: var(--white);
+    border-radius: 50px;
+    height: 2rem;
+    margin-top: .5rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.placeholder {
+    font-size: 8px;
+    margin-left: 10px;
+    color: var(--dark-grayish-violet);
+    opacity: .7;
+}
+
+.send-btn {
+    background-color: var(--very-dark-desaturated-violet);
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+}
+
+.send-icon {
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
+}
 
 /* App info */
+
 .app-info {
     text-align: center;
     padding: 0 2.5rem;
